@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
 +getAllPendingReviews(): Review
}

class ReviewService {
 + ReviewService(ReviewRepository RevRepo)
 + getAllPendingReviews(): Review
}

interface ReviewRepository {
 + getAllPendingReviews(): Review
}


class Review{
    -ReviewId
    -Text
    -Rating
    -Date
    -Status
    -upVote
    -downVote
   Review(reviewId,text,rating,date,status,upVote,downVote)
}


ReviewRepository "1" -right-> "0..*" Review:  records
ReviewController ..> ReviewService
ReviewService ..> ReviewRepository

@enduml
